
  * Passwords are now hashed using the PBKDF2 algorithm with a
    configurable work factor.

Test Suite:

  * Moved the JS test suite to the CLI
  * Improved tracebacks printed by the JS CLI tests
  * Improved the reliability of a number of tests

UUID Algorithms:

  * Added the utc_id algorithm.

URL Rewriter & Vhosts:

  * Database name is encoded during rewriting (allowing embedded /'s, etc)

Log System:

  * Allow per-module configuration of log levels.


Version 1.2.1
-------------

This version has not been released yet.

Version 1.2.0
-------------

Authentication:

 * Fix use of OAuth with VHosts and URL rewriting.
 * OAuth secrets can now be stored in the users system database
   as an alternative to key value pairs in the .ini configuration.
   By default this is disabled (secrets are stored in the .ini)
   but can be enabled via the .ini configuration key `use_users_db`
   in the `couch_httpd_oauth` section.
 * Documents in the _users database are no longer publicly
   readable.
 * Confidential information in the _replication database is no
   longer publicly readable.
 * Password hashes are now calculated by CouchDB. Clients are no
   longer required to do this manually.
 * Cookies used for authentication can be made persistent by enabling
   the .ini configuration key `allow_persistent_cookies' in the
   `couch_httpd_auth` section.

Build System:

 * cURL is no longer required to build CouchDB as it is only
   used by the command line JS test runner. If cURL is available
   when building CouchJS you can enable the HTTP bindings by
   passing -H on the command line.
 * Temporarily made `make check` pass with R15B. A more thorough
   fix is in the works (COUCHDB-1424).
 * Fixed --with-js-include and --with-js-lib options.
 * Added --with-js-lib-name option.

HTTP Interface:

 * Added a native JSON parser.
 * The _active_tasks API now offers more granular fields. Each
   task type is now able to expose different properties.